--- a/src/components/Shared/Picker/scss/picker.scss
+++ b/src/components/Shared/Picker/scss/picker.scss
@@ -1,10 +1,34 @@
 @import '../../../../scss/colours';
 
-.toggle {
+.picker {
   display: flex;
-  color: $yellow;
-  .value {
-    flex: 1;
+  color: white;
+  width: 100%;
+  &__button {
+    width: 50px;
     text-align: center;
+    > button {
+      &:disabled {
+        opacity: 0.3;
+      }
+    }
+  }
+  &__button, &__value {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  &__value {
+    flex: 1;
+  }
+  &-value {
+    text-align: center;
+    font-family: 'Helvetica Ultra Compressed';
+    font-size: 50px;
+  }
+  &-label {
+    color: $yellow;
+    display: block;
+    margin-top: 5px;
   }
 }
