--- a/src/scss/layout/app.scss
+++ b/src/scss/layout/app.scss
@@ -11,10 +11,15 @@
     top: 0;
     left: 0;
   }
-  > main {
+  &__content {
     width: 100%;
     height: 100%;
     position: relative;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
+    > section {
+      flex: 1;
+    }
   }
 }
