--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -1,3 +1,5 @@
+@import 'colours';
+
 * {
   box-sizing: border-box;
 }
@@ -19,8 +21,4 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-html {
-  background: #FFFCF3;
 }
