--- a/src/scss/type.scss
+++ b/src/scss/type.scss
@@ -1,3 +1,5 @@
+@import 'colours';
+
 @font-face {
   font-family: 'Helvetica Ultra Compressed';
   src: url('/fonts/Helvetica-UltraCompressed.otf');
@@ -16,6 +18,8 @@ html, body {
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: $green;
+  color: $yellow;
 }
 
 h1, h2, .h1, .h2 {
