--- a/src/scss/type.scss
+++ b/src/scss/type.scss
@@ -1,4 +1,5 @@
 @import 'colours';
+@import 'textstyles';
 
 @font-face {
   font-family: 'Helvetica Ultra Compressed';
@@ -14,7 +15,6 @@
 html, body {
   font-family: 'Founders Grotesk', sans-serif;
   font-weight: 500;
-  text-transform: uppercase;
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -22,17 +22,10 @@ html, body {
   color: $yellow;
 }
 
-h1, h2, .h1, .h2 {
-  font-family: 'Helvetica Ultra Compressed';
-  font-weight: normal;
-  margin: 0 0 5px;
-  letter-spacing: 0;
-}
-
 h1, .h1 {
-  font-size: 80px;
+  @include header(1);
 }
 
 h2, .h2 {
-  font-size: 55px;
+  @include header(2);
 }
