--- a/src/scss/layout/frame.scss
+++ b/src/scss/layout/frame.scss
@@ -18,16 +18,16 @@
   
   footer {
     display: flex;
-    span {
+    > * {
       flex: 1;
     }
-    span:nth-child(1) {
+    > *:nth-child(1) {
       text-align: left;
       &:last-child {
         text-align: center;
       }
     }
-    span:nth-child(2) {
+    > *:nth-child(2) {
       &:last-child {
         text-align: right;
       }
