--- a/src/scss/layout/app.scss
+++ b/src/scss/layout/app.scss
@@ -11,6 +11,9 @@
     top: 0;
     left: 0;
   }
+  &__header {
+    padding: 0 0 15px;
+  }
   &__content {
     width: 100%;
     height: 100%;
@@ -18,6 +21,7 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
+    padding: 30px;
     > section {
       flex: 1;
     }
