--- a/src/scss/layout/frame.scss
+++ b/src/scss/layout/frame.scss
@@ -3,20 +3,20 @@
   display: flex;
   flex-direction: column;
 
-  header {
+  > header {
     display: flex;
     justify-content: center;
   }
 
-  article {
+  > article {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center
   }
   
-  footer {
+  > footer {
     display: flex;
     > * {
       flex: 1;
