--- a/src/scss/layout/frame.scss
+++ b/src/scss/layout/frame.scss
@@ -3,11 +3,6 @@
   display: flex;
   flex-direction: column;
 
-  > header {
-    display: flex;
-    justify-content: center;
-  }
-
   > article {
     flex: 1;
     display: flex;
@@ -16,7 +11,7 @@
     align-items: center
   }
   
-  > footer {
+  > header, > footer {
     display: flex;
     > * {
       flex: 1;
