--- a/src/scss/layout/frame.scss
+++ b/src/scss/layout/frame.scss
@@ -8,7 +8,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    &.scrollable {
+      overflow: auto;
+    }
   }
   
   > header, > footer {
